2004-08-19  Julien Puydt <jpuydt@free.fr>

	* lib/stats_drawing_area.h, lib/stats_drawing_area.c: Added copyright
	notice, fixed memory freeing, and made it use gettext.

2004-08-18  Damien Sandras  <dsandras@gnome.org>

	* src/common.h, src/main_window.cpp, src/menu.cpp, src/menu.h:
	Started to move the menu to the main window where it should belong.

2004-08-18  Julien Puydt  <jpuydt@free.fr>

	* lib/stats_drawing_area.h, lib/stats_drawing_area.c: Made a GObject
	with the existing code in src/main_window.cpp and src/endpoint.cpp,
	and cleaned it.
	* lib/Makefile.am: Compile the previous.
	* src/common.h, src/gnomemeeting.cpp, src/gnomemeeting.h,
	src/endpoint.cpp, src/main_window.cpp: Wiped out the old stats drawing
	code, and any reference to GmRtpData.

2004-08-18  Julien Puydt  <jpuydt@free.fr>

	* src/endpoint.h: Added last_*_octets_transmitted, so the endpoint
	can compute speeds.
	* src/endpoint.cpp: The computation of speeds now doesn't use GmRtpData
	anymore. Hopefully only the stats drawing uses that structure now.

2004-08-18  Julien Puydt  <jpuydt@free.fr>

	* src/endpoint.h: Added last_*_octets_received attributes, so the
	endpoint can remember if data came in.
	* src/endpoint.cpp: The detection of no-incoming data now doesn't use
	GmRtpData anymore.

2004-08-18  Julien Puydt  <jpuydt@free.fr>

	* src/endpoint.cpp: Removed local variable that was just hiding an
	object attribute (gw!).
	* src/videograbber.cpp: Turns out the videograbber still used GmWindow
	once. Made sure the gw attribute is set correctly, so gnomemeeting
	stops crashing.

2004-08-18  Julien Puydt  <jpuydt@free.fr>

	* src/gnomemeeting.cpp(DetectDevices): Made sure the ui is updated
	only when it is already created (fixes a warning).

2004-08-16  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp, src/druid.cpp, src/gnomemeeting.cpp, 
	src/gnomemeeting.h, src/pref_window.cpp: Made DetectDevices update
	the prefs window when used.

2004-08-16  Damien Sandras  <dsandras@gnome.org>