@@ -1,3 +1,9 @@
+2004-08-20  Julien Puydt <jpuydt@free.fr>
+
+	* src/main_window.cpp: Removed the bonobo code from that file. 
+	* src/bonobo_component.h, src/bonobo_component.cpp: Put the code
+	removed there.
+
 2004-08-19  Julien Puydt <jpuydt@free.fr>
 
 	* lib/stats_drawing_area.h, lib/stats_drawing_area.c: Added copyright
